--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mca-expo",
+  "name": "money-master",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -22,6 +22,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/config": "^1.69.1",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
@@ -33,7 +34,6 @@
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
     "expo-web-browser": "~12.1.1",
-    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -44,6 +44,7 @@
     "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.10",
+    "tamagui": "^1.69.1",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
