--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.69.1",
     "@tamagui/toast": "^1.69.3",
     "@tanstack/react-query": "^4.29.19",
+    "@twotalltotems/react-native-otp-input": "1.3.7",
     "axios": "^1.4.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "burnt": "^0.11.7",
@@ -32,7 +34,7 @@
     "expo": "48.0.18",
     "expo-font": "11.1.1",
     "expo-linking": "4.0.1",
-    "expo-router": "^1.5.2",
+    "expo-router": "^2.0.0",
     "expo-splash-screen": "0.18.2",
     "expo-status-bar": "1.4.4",
     "expo-system-ui": "2.2.1",
