--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "money-master",
+  "name": "class-management-expo",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -61,7 +61,11 @@
     "jest": "^29.2.1",
     "jest-expo": "~48.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.0.2"
+  },
+  "resolutions": {
+    "@types/react": "18.0.28",
+    "@types/react-dom": "^18.0.11"
   },
   "private": true
 }
