--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -31,6 +33,9 @@
         "projectId": "4ee91048-76e2-438a-ba9d-4acefb6bf4eb"
       }
     },
-    "owner": "hoanthui123"
+    "owner": "hoanthui123",
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
