--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.69.1",
     "@tamagui/toast": "^1.69.3",
@@ -31,41 +31,37 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "burnt": "^0.11.7",
     "dayjs": "^1.11.9",
-    "expo": "48.0.18",
-    "expo-font": "11.1.1",
-    "expo-linking": "4.0.1",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "0.18.2",
-    "expo-status-bar": "1.4.4",
-    "expo-system-ui": "2.2.1",
-    "expo-web-browser": "12.1.1",
-    "lottie-react-native": "^5.1.6",
+    "expo": "51",
+    "expo-font": "~12.0.10",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-pager-view": "6.1.2",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.10",
+    "react-native-web": "~0.19.10",
     "tamagui": "^1.69.1",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.79",
     "@types/react-native": "^0.72.2",
     "jest": "^29.2.1",
-    "jest-expo": "~48.0.0",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.0.2"
-  },
-  "resolutions": {
-    "@types/react": "18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
