--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.69.1",
+    "@tamagui/lucide-icons": "^1.110.2",
     "@tamagui/toast": "^1.69.3",
     "@tanstack/react-query": "^4.29.19",
     "@twotalltotems/react-native-otp-input": "1.3.7",
     "axios": "^1.4.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "burnt": "^0.11.7",
-    "dayjs": "^1.11.9",
+    "dayjs": "^1.11.13",
     "expo": "51",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
