--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "burnt": "^0.11.7",
     "dayjs": "^1.11.13",
     "expo": "51",
+    "expo-camera": "~15.0.15",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
