--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@10play/tentap-editor": "^0.5.21",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4",
@@ -56,6 +57,7 @@
     "react-native-svg": "15.2.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "tamagui": "^1.69.1",
     "zustand": "^4.3.9"
   },
