--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.69.1",
     "@tamagui/lucide-icons": "^1.110.2",
@@ -35,10 +36,13 @@
     "dayjs": "^1.11.13",
     "expo": "51",
     "expo-camera": "~15.0.15",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-print": "~13.0.1",
     "expo-router": "~3.5.23",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -59,6 +63,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "tamagui": "^1.69.1",
+    "xlsx": "^0.18.5",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
