--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.69.1",
     "@tamagui/lucide-icons": "^1.110.2",
@@ -34,44 +34,44 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "burnt": "^0.11.7",
     "dayjs": "^1.11.13",
-    "expo": "51",
-    "expo-camera": "~15.0.15",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-print": "~13.0.1",
+    "expo": "^52.0.0",
+    "expo-camera": "~16.0.9",
+    "expo-file-system": "~18.0.4",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-print": "~14.0.2",
     "expo-router": "~3.5.23",
-    "expo-sharing": "~12.0.1",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "lottie-react-native": "6.7.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "expo-sharing": "~13.0.0",
+    "expo-splash-screen": "~0.29.16",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.5",
+    "expo-web-browser": "~14.0.1",
+    "lottie-react-native": "7.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
+    "react-native-webview": "13.12.5",
     "tamagui": "^1.69.1",
     "xlsx": "^0.18.5",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.2",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.4",
+    "jest-expo": "~52.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
